package ua.spro.oderbook.model;

import java.util.List;

public record OrderBook(
    long lastUpdateId,
    long E, // event time
    long T, // transaction time
    String symbol,
    String pair,
    List<List<String>> bids,
    List<List<String>> asks) {}
/*
* {
    "lastUpdateId": 1054271865287,
    "E": 1729415266791,
    "T": 1729415266782,
    "symbol": "BTCUSD_PERP",
    "pair": "BTCUSD",
    "bids": [
        [
            "68336.6",
            "2345"
        ],
        [
            "68335.1",
            "39"
        ],
        [
            "68335.0",
            "34"
        ],
        [
            "68334.9",
            "25"
        ],
        [
            "68334.2",
            "10"
        ],
        [
            "68334.0",
            "24"
        ],
        [
            "68333.8",
            "25"
        ],
        [
            "68333.2",
            "2"
        ],
        [
            "68333.1",
            "49"
        ],
        [
            "68332.8",
            "108"
        ],
        [
            "68332.5",
            "6"
        ],
        [
            "68331.4",
            "47"
        ],
        [
            "68330.7",
            "1"
        ],
        [
            "68329.8",
            "51"
        ],
        [
            "68329.5",
            "79"
        ],
        [
            "68329.0",
            "2"
        ],
        [
            "68328.7",
            "287"
        ],
        [
            "68328.6",
            "10"
        ],
        [
            "68328.4",
            "12"
        ],
        [
            "68327.9",
            "761"
        ]
    ],
    "asks": [
        [
            "68336.7",
            "3322"
        ],
        [
            "68336.8",
            "73"
        ],
        [
            "68337.5",
            "1"
        ],
        [
            "68337.7",
            "108"
        ],
        [
            "68338.0",
            "36"
        ],
        [
            "68338.3",
            "30"
        ],
        [
            "68339.2",
            "2"
        ],
        [
            "68339.4",
            "30"
        ],
        [
            "68340.0",
            "434"
        ],
        [
            "68340.1",
            "122"
        ],
        [
            "68340.3",
            "23"
        ],
        [
            "68340.9",
            "31"
        ],
        [
            "68341.2",
            "300"
        ],
        [
            "68341.9",
            "189"
        ],
        [
            "68342.0",
            "36"
        ],
        [
            "68342.1",
            "280"
        ],
        [
            "68343.0",
            "150"
        ],
        [
            "68343.3",
            "30"
        ],
        [
            "68343.4",
            "599"
        ],
        [
            "68343.5",
            "123"
        ]
    ]
}*/